--- a/file2.html
+++ b/file2.html
@@ -1,5 +1,4 @@
-chandana 1st fil
-[200~<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -45,4 +44,4 @@ chandana 1st fil
 
 </body>
 </html>
-e
+
